fix white space in mission section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,7 +164,7 @@ h3 {
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
     line-height: 22px;
-    margin: 10px auto;
+    margin: 20px auto;
     padding: 12px 30px;
     transition: all 200ms ease;
 }
@@ -189,6 +189,8 @@ a:hover {
 #our-mission h3 {
     margin-bottom: 20px;
     text-align: center;
+    font-size: 120%;
+    font-weight: 500;
 }
 
 #about-who > div, #about-approach > div {
